  - Fixed defect #187 trailing character in some IMDB plot output
  - Fixed defect #188 Runtime is sometimes showing up as UNKNOWN
  - Enhancement #189 Hungarian flag support
    Also resizing of other SD flags
  - Fixed defect #195 Episode names vanished after second YAMJ run
  - Fixed defect #198 HTML and XML files are always overwritten
  - Enhancement #201 Download of coverArt on temp directory instead of final Jukebox Directory
  - Fixed defect #203 Filmweb plugin doesn't work when there is a welcome screen with ad banner
  - Fixed defect #204 Movie trailer title from XML is always replaced by title from file name
  - Fixed defect #205 Only one trailer at detail page
  - Fixed defect #206 Local coverArt not working for VIDEO_TS directories
  - Fixed defect #207 with genre filtering the subGenre still shows in the detail page resulting in broken links
  - Fixed defect #209 Filmweb plugin - genres aren't correctly recognized after filmweb site has been changed
  - Fixed defect #210 sortTitle is displayed instead of title, so sortTitle field can't be tweaked to change only the sort order

MovieJukebox 1.0.11 beta
-----------------------
  - Enhancement Issue #78 Custom coverart Enhancement
    Quick first implementation (not flexible but working ;) )
    Scan the .nfo file for the URL of poster (currently only URL starting with
    http:// and ending with .jpg or .JPG)
    If this URL exists, set it as poster URL and to not search for another poster.
  - Enhancement Issue #81 Additional Video Sources (HD2DVD)
  - Fixed defect #96 Multiple Genres cause multiple entries under the "master" genres
  - Enhancement Issue #97 Prefix stripping is case sensitive
  - Enhancement Issue #105 Support for MP4 file format added
  - Fixed defect #106 XML indexes generation is very long
  - Enhancement Issue #107 Selective resizing of poster images
  - Enhancement Issue #108 Allocine Plugin
    New MovieDatabasePlugin using a french movie database site named AlloCine.