@@ -6,6 +6,11 @@ imdb.genres.max=1
 # Use the short plot or long plot description from IMDB : short or long
 imdb.plot=short
 
+# Download fanart image for movies using the IMDB id : true or false
+moviedb.fanart.download=false
+background.width=1280
+background.height=720
+
 # Use the short plot or long plot description from Filmweb : short or long
 filmweb.plot=short
 
@@ -53,10 +58,10 @@ posters.language=false
 posters.perspective=true
 
 # This is the fully qualified name of the plugin class implementing 
-# the thumbnail generator for movie posters.
+# the thumbnail/poster/background generator for movie posters.
 #
 # You can replace this default class with your own in order
-# to develop your customized thumbnail creator.
+# to develop your customized image creator.
 #
 # The class must implement interface com.moviejukebox.MovieImagePlugin
 # Make sure to modify the classpath accordingly in the moviejukebox startup script
@@ -64,4 +69,4 @@ posters.perspective=true
 # If you don't know what all this is about, DO NOT CHANGE THIS VALUE.
 mjb.thumbnail.plugin=com.moviejukebox.plugin.DefaultThumbnailPlugin
 mjb.poster.plugin=com.moviejukebox.plugin.DefaultPosterPlugin
-
+mjb.background.plugin=com.moviejukebox.plugin.DefaultBackgroundPlugin
