@@ -4,6 +4,17 @@
 # mjb.homePage=Other_All_1
 mjb.homePage=Categories
 
+# Use the short plot or long plot description from IMDB : short or long
+imdb.plot=short
+
+# Use the short plot or long plot description from Filmweb : short or long
+filmweb.plot=short
+
+# Download fanart image for movies using the IMDB id : true or false
+moviedb.fanart.download=false
+background.width=685
+background.height=460
+
 # Maximum number of thumbnails per index page
 mjb.nbThumbnailsPerPage=12
 
@@ -50,7 +61,7 @@ posters.language=true
 posters.perspective=true
 
 # This is the fully qualified name of the plugin class implementing
-# the thumbnail generator for movie posters.
+# the thumbnail/poster/background generator for movie posters.
 #
 # You can replace this default class with your own in order
 # to develop your customized thumbnail creator.
@@ -61,6 +72,7 @@ posters.perspective=true
 # If you don't know what all this is about, DO NOT CHANGE THIS VALUE.
 mjb.thumbnail.plugin=com.moviejukebox.plugin.DefaultThumbnailPlugin
 mjb.poster.plugin=com.moviejukebox.plugin.DefaultPosterPlugin
+mjb.background.plugin=com.moviejukebox.plugin.DefaultBackgroundPlugin
 
 # Sorting prefixes to ignore:
 sorting.strip.prefixes="A ","The ","Le ","Les "
